# React-FastAPI-Postgres

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CACHE_MIGRATION_STATUS.md  CLAUDE.md  GEMINI.md  LLM_FINAL_GUIDE.md  LLM_GUIDE_INTEGRATED_VER.md  LLM_LOCAL_MODEL_GUIDE.md  MOBILE_RESPONSIVE_GUIDE.md  RAG_Adaptive_Phase1-2_Implementation.md  RAG_IMPLEMENT_GUIDE.md  RAG_adaptive_upgrade_guide.md  README.md  REFACTOR_GUIDE_HAYSTACK.md  SCHEDULER_REFACTOR_PLAN.md  Step0.md  add_bm25_guide.md  analyze_result.md  backend_knowledge_base_optimization.md  conversation-metadata-auto-fill.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  front_page_refactor.md  knowledge_base_refactor.md  llm_query_intent_classifier_rollout.md  package-lock.json  rag_system_issues.md  refactor_guide.md  refactor_guide_final.md  refactor_guide_part2.md  refactor_guide_v2.md  refactor_guide_v3.md  some_guide.md
backend/: .dockerignore  Dockerfile  Dockerfile.llama-curl  Dockerfile.prod  README.md  alembic.ini  backend_fully_refactor_guide.md  backend_optimize_guide.md  backend_refactor.md  backend_refactor_guide.md  backend_taskSystem_refactor_guide.md  backend_tasks_refactor_guide.md  celery_worker.py  comprehensive_tasks_manager_test.py  job_refactor_guide.md  log.txt  pyproject.toml  redis_refactor_guide.md  refactor_guide.md  reset_password_feature_guide.md  scheduler_guide.md  simple_tasks_manager_test.py  task_system_refactor_execution_guide.md  task_system_refactor_execution_guide_v2.md  task重构初步规划.md  task重构及任务进度报告.md  test_query_param_schedule_endpoint.py  test_status_sync_simple.py  test_tasks_manager.py
backend/alembic/: env.py
backend/alembic/versions/: 041e7e094383_add_timeout_monitor_and_cleanup_timeout_.py  0ef59a411276_create_initial_tables.py  103421823f33_add_conversation_and_message_tables.py  11f5f08265fb_add_refresh_token_model.py  342c3c423e6e_remove_unused_tables_refresh_tokens_and_.py  35d1b95206cb_add_refresh_token_model.py  3f9a9b1a7a00_add_knowledge_table.py  41786af6649e_create_task_configs_table_only.py  4937b11b81ef_auto_migration.py  4b7f97a4eb0c_expand_embedding_vector_dimension.py  52c128656971_add_refresh_token_model.py  542516ee7114_dynamic_dimension.py  58d547c5b0a7_auto_migration.py  6bd226770f06_initial_migration.py  7383ea140bc9_make_config_id_nullable_in_task_.py  778ebd7880ad_initial_migration.py  789b505bf7a8_change_task_type_to_string.py  7c2e9e5f3b92_add_language_to_chunks.py  7e6044053bda_create_users_table.py  849acbac87da_migrate_from_celery_to_taskiq_update_.py  853a8ecceec1_add_refresh_token_model.py  8a6729288167_test_auto_enum_migration.py  8f8953189320_add_refresh_token_model.py  9010685dfb02_add_refresh_token_model.py  9685c4bab94a_add_refresh_token_model.py  990a5a0754a4_add_refresh_token_model.py  a365fb6cc976_remove_cleanup_sessions_task_type.py  a7cf9cebeb90_auto_migration.py  b7f6a3e6e9f4_add_search_vector_to_chunks.py  ba0359413f75_add_refresh_token_model.py  bda0acbea51f_delete_token_and_schedule.py  c1a2f8d0b3e4_drop_legacy_knowledge_doc_and_message_fields.py  cede1b500688_fix_cascade_delete_for_schedule_events_.py  d00d0a4f59b0_first_migration.py  d80b093e0800_remove_test_auto_enum.py  ec314bb58941_initial_database_schema.py  fa8572cdffbb_initial_migration.py  fe17094cc61b_remove_interval_scheduler_type.py  ff407dfb6bcd_initial_migration.py  unified_naming_migration.py
backend/app/: broker.py  celery_app.py  main.py  scheduler.py
backend/app/api/: __init__.py  api.py  dependencies.py
backend/app/constant/: cache_tags.py  constants.py  task_registry.py
backend/app/core/: celery_config  celery_config.py  config.py  constants.py  event_recorder.py  exceptions.py  job_config_manager.py  logging.py  monitor_wrapper.py  redis_core.py  redis_manager.py  redis_pool.py  redis_timeout_store.py  scheduler.py  security.py  task_decorators.py  task_dispatcher.py  task_manager.py  task_mapping.py  task_registry.py  task_type.py  timeout_decorator.py  timeout_monitor_engine.py
backend/app/crud/: __init__.py  bot_config.py  password_reset.py  post.py  reddit_content.py  schedule_event.py  scrape_session.py  task_config.py  task_execution.py  token.py  user.py
backend/app/db/: base.py  base_class.py  engine_manager.py
backend/app/dependencies/: __init__.py  current_user.py  db.py
backend/app/middleware/: auth.py  cors.py  decorators.py  logging.py  timing.py
backend/app/models/: __init__.py  bot_config.py  password_reset.py  post.py  reddit_content.py  schedule_event.py  scrape_session.py  task_config.py  task_execution.py  token.py  user.py
backend/app/redis/: auth.py  auth_redis.py  cache.py  cache_redis.py  history.py  schedule_history_redis.py  scheduler.py  scheduler_redis.py  timeout_redis.py
backend/app/schemas/: __init__.py  auth.py  bot_config.py  common.py  dependency_demo.py  example.py  file.py  job_schemas.py  password_reset.py  post.py  product.py  reddit_content.py  schedule_event.py  scrape_session.py  task.py  task_config.py  task_config_schemas.py  task_executions_schemas.py  task_schedules_schemas.py  task_system_schemas.py  token.py  user.py  validators.py
backend/app/services/: __init__.py  bot_config_service.py  reddit_scraper_service.py  schedule_manager.py  scraping_orchestrator.py  task_manager.py  tasks_manager.py
backend/app/tasks/: __init__.py  celery_tasks.py  cleanup_jobs.py  cleanup_tasks.py  (+12 more)
backend/script/: COMPANY_CODE.txt  CURRENCY.txt  CUSTOMER_NO.txt  SALES_UNIT.txt  SEG5.txt  generateData.py  generateJwt.py  generateSalesFile.py  relation.csv  seg3.txt
(+353 files in other folders)
