[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Faye <FayeValentina@gmail.com>"]
package-mode = false

# +++ 新增内容：为 PyTorch 指定 CPU 版本的下载源 +++
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.11"
redis = "^5.0.7"
fastapi = "^0.112.0"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.42"
pydantic = {extras = ["email"], version = "^2.11.0"}
pydantic-settings = "^2.10.0"
pydantic-extra-types = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.6"
alembic = "^1.13.1"
alembic-autogenerate-enums = "^0.1.2"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
pytz = "^2024.1"
asyncpraw = "^7.7.1"
tweepy = "^4.14.0"
python-telegram-bot = "^20.0"
aiohttp = "^3.8.0"
pillow = "^10.0.0"
google-genai = "^0.3.0"
twitter-text-parser = "^3.0.0"
taskiq = "^0.11.8"
taskiq-aio-pika = "^0.4.3"
taskiq-redis = "^1.0.0"
croniter = "^1.4.1"
gunicorn = "^21.2.0"
aiosmtplib = "^4.0.0"
openai = "^1.107.0" # 已更新到较新稳定版
sentence-transformers = "^3.0.1"
pgvector = "^0.2.5"
hf-transfer = "^0.1.6"
unstructured = "^0.17.0"
charset-normalizer = "^3.3"
langchain-text-splitters = "^0.3.0"
tiktoken = "^0.7"
lingua-language-detector = "^1.4"
spacy = "^3.8.2"

# --- NLTK 已被移除 ---
# nltk = "^3.9" 

# +++ 新增内容：明确要求安装 CPU 版本的 torch +++
# sentence-transformers 会自动使用这个预先定义的、来自 CPU 源的 torch
torch = {version = "^2.8.0", source = "pytorch-cpu"}


[tool.poetry.group.dev.dependencies]
taskiq = {extras = ["reload"], version = "^0.11.18"}
ruff = "^0.6.2"
pytest = "^8.3.2"
pytest-cov = "^6.0.0"
watchfiles = "^0.22.0"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  ".venv",
  "alembic",
  "migrations",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
]
ignore = [
  "E501",  # line length handled elsewhere to reduce noise
  "F401",  # unused imports (phase-in later)
  "F403",  # from module import *
  "F405",  # name may be undefined from * import
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
